@@ -18,7 +18,7 @@ apply plugin: 'java'
 apply plugin: 'maven-publish'
 
 repositories {
-    mavenLocal() // TODO: use lib/ instead?
+    flatDir { dirs uri("${projectDir}/lib") }
     maven { url 'https://mvn.freenetproject.org' }
     jcenter()
 }
@@ -178,6 +178,11 @@ compileTestJava.dependsOn copyResourcesToClasses2
 compileTestJava.dependsOn copyTestResourcesToClasses2
 
 test {
+    if(JavaVersion.current() >= JavaVersion.VERSION_1_9) {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+    }
     minHeapSize = "128m"
     maxHeapSize = "512m"
     // no inner class
@@ -231,6 +236,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
     testCompile "org.hamcrest:hamcrest-library:1.3"
+    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "org.objenesis:objenesis:1.0"
 }
 
 dependencyVerification {
